Obj file loader written and working.
Currently loading Blender monkey.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,11 @@ message(STATUS "Using " $ENV{VULKAN_SDK})
 add_executable( ${PROJECT_NAME} main.cpp
     Helpers.cpp Helpers.hpp
     Resources.cpp Resources.hpp
+    Loader.cpp Loader.hpp
     vkmDeviceFeatureManager.cpp vkmDeviceFeatureManager.hpp
     vkmInit.cpp vkmInit.hpp)
 
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_include_directories( ${PROJECT_NAME} PUBLIC $ENV{VULKAN_SDK}/include ) # ${CMAKE_HOME_DIRECTORY}/extern )
 target_link_libraries( ${PROJECT_NAME} PRIVATE 
     $ENV{VULKAN_SDK}/lib/libvulkan.so
