--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,22 +11,22 @@ message(STATUS "Using " $ENV{VULKAN_SDK})
 # set(TINYGLTF_INSTALL OFF CACHE INTERNAL "" FORCE)
 # add_subdirectory( ${CMAKE_HOME_DIRECTORY}/extern/tinygltf )
 
-# set(IMGUI_INCLUDE_DIRS extern/imgui extern/imgui/backends)
-# include_directories(${IMGUI_INCLUDE_DIRS})
+set(IMGUI_INCLUDE_DIRS external/imgui external/imgui/backends)
+include_directories(${IMGUI_INCLUDE_DIRS})
 
-# set(IMGUI_CORE_FILES
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/imgui_demo.cpp
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/imgui_draw.cpp
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/imgui_tables.cpp
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/imgui_widgets.cpp
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/imgui.cpp
-# )
-# set(IMGUI_BACKEND_FILES
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/backends/imgui_impl_glfw.cpp
-#     ${CMAKE_HOME_DIRECTORY}/extern/imgui/backends/imgui_impl_vulkan.cpp)
+set(IMGUI_CORE_FILES
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/imgui_demo.cpp
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/imgui_draw.cpp
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/imgui_tables.cpp
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/imgui_widgets.cpp
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/imgui.cpp
+)
+set(IMGUI_BACKEND_FILES
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/backends/imgui_impl_glfw.cpp
+    ${CMAKE_HOME_DIRECTORY}/external/imgui/backends/imgui_impl_vulkan.cpp)
 
-# set(IMGUI_SOURCES "")
-# set(IMGUI_SOURCES ${IMGUI_CORE_FILES} ${IMGUI_BACKEND_FILES})
+set(IMGUI_SOURCES "")
+set(IMGUI_SOURCES ${IMGUI_CORE_FILES} ${IMGUI_BACKEND_FILES})
 
 
 
@@ -35,10 +35,11 @@ add_executable( ${PROJECT_NAME} main.cpp
     Resources.cpp Resources.hpp
     Loader.cpp Loader.hpp
     vkmDeviceFeatureManager.cpp vkmDeviceFeatureManager.hpp
-    vkmInit.cpp vkmInit.hpp)
+    vkmInit.cpp vkmInit.hpp
+    ${IMGUI_SOURCES} )
 
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
-target_include_directories( ${PROJECT_NAME} PUBLIC $ENV{VULKAN_SDK}/include ) # ${CMAKE_HOME_DIRECTORY}/extern )
+target_include_directories( ${PROJECT_NAME} PUBLIC $ENV{VULKAN_SDK}/include ${CMAKE_HOME_DIRECTORY}/external )
 target_link_libraries( ${PROJECT_NAME} PRIVATE 
     $ENV{VULKAN_SDK}/lib/libvulkan.so
     glfw
